@@ -389,6 +389,7 @@
     <string name="invalid_puzzle_format">Invalid puzzle format</string>
     <string name="invalid_mime_type">Invalid MIME type, please, check your clipboard contents</string>
 
+    <!-- Strings added/changed in 3.x.x -->
     <string name="reset_all_puzzles">Reset all</string>
     <string name="reset_all_puzzles_confirm">Are you sure you want to reset all puzzles in this folder?</string>
 </resources>
