@@ -1,6 +1,10 @@
 <html>
 <head><style type="text/css">body {font-size: smaller;}</style></head>
 <body>
+  <b>3.x.x</b>
+  <ul>
+    <li>Added <i>reset all</i> option in sudoku list menu. Thanks @D0ct0rZl0!</li>
+  </ul>
   <b>3.7.0</b>
   <ul>
     <li>Add copy and paste ability in sudoku editor. Thanks @demield!</li>
